test: make it complicated and with calculated column